
- Added a work around for broken firewalls that rewrite certain commands
  (specifically PORT) with two CR characters before the final LF.

- Fixed missing socket library for SysV (ie Solaris) systems.

- Strip trailing slashes, which confuse at least the "lock $HOME" mode,
  from the home path.

- Use corked (Linux) or no-push (BSD) writes to improve transfer
  efficiency.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.13

- Bugfix: listing "." when CWD is "/" would fail.

- Include system error message in STAT and MDTM.

- Print out an error message when the session or command times out,
  instead of just silently dropping the connection.

- Modified the PASV response to work around yet more broken clients.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.12

- Now uses the CVM 0.10 (protocol 1) API for authentication.  This means
  you MUST use modules from CVM 0.10 or later with this version.

- Many error messages now include the system error message (like "File
  or path not found") that caused the error.

- Added a simple, limited LIST/NLST option parser, to provide
  compatibility with broken clients that like to send commands like
  "NLST -alL".

- Added authentication and session timeout limits.

- SITE commands are no longer output twice in the logs.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.11

- Fixed a nasty bug (guaranteed corruption) with retrieving files larger
  than 4KB in ASCII mode.
